src/test/Properties6/Properties6.expected
error: Properties6.panda:9:19: cannot assign to 'test.name()'
1 error
