src/test/Properties6/Properties6.panda
class Test {
    @readonly
    property name := "Hello, my name is {}!"

    @class
    method main() {
        def test := Test()
        Console.writeLine(test.name)
        test.name := "This won't compile!"
    }
}